maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:60: error: '(' expected but '{' found.
    } else if { 
              ^PledgeMaze:69: error: illegal start of simple expression
  }
  ^